Edited the introduction and the background sections

--- a/text/Thesis.tex
+++ b/text/Thesis.tex
@@ -226,8 +226,8 @@ Associate Professor Evgeny Burnaev
 {
 \multicolumn{2}{p\linewidth}{
 Scalar numbers are denoted by unbolded letters ($x$),
-bold $\mathbf{x}$ represents a vector and $x_i$ is an $i$-th element of the vector,
-bold capital letter $\mathbf{X}$ represents a matrix,
+bold $\mathbf{x}$ represents a vector, and $x_i$ is an $i$-th element of the vector.
+Bold capital letter $\mathbf{X}$ represents a matrix,
 while calligaphic capital $\mathcal{X}$ is typically used
 to denote a tensor.} \\
 \\
@@ -251,91 +251,91 @@ $\partial^{\mathbf{p}} f(\mathbf{x})$ & higher order partial derivative
 $\partial^{\mathbf{p}} f(\mathbf{x}) = \frac{\partial^{p_1 + \cdots + p_d}}{\partial x_1^{p_1}\cdots\partial x_d^{p_d}}f(\mathbf{x})$,
 where $\mathbf{p}$ is a multi-index
 \\
-$\partial^{\mathbf{p}, \mathbf{q}} k(\mathbf{x}, \mathbf{x}')$ & 
+$\partial^{\mathbf{p}, \mathbf{q}} k(\mathbf{x}, \mathbf{x}')$ &
 higher order partial derivative of the kernel function, where multi-index $\mathbf{p}$ corresponds
 to the derivatives w.r.t. the first argument of the kernel function and
 $\mathbf{q}$ corresponds to the second argument
 \\
-$\mathcal{D}$ & 
-Data set $\mathcal{D} = (\mathbf{X}, \mathbf{y}) = \{\mathbf{x}_i ,y_i\}_{i=1}^N$
+$\mathcal{D}$ &
+data set $\mathcal{D} = (\mathbf{X}, \mathbf{y}) = \{\mathbf{x}_i ,y_i\}_{i=1}^N$
 \\
-$d$ & 
+$d$ &
 dimension of input vectors $\mathbf{x}_i$
 \\
-$\mathbb{E}$ or $\mathbb{E}_{p(x)}\left [ f(x) \right ]$ & 
+$\mathbb{E}$ or $\mathbb{E}_{p(x)}\left [ f(x) \right ]$ &
 expectation of $f(x)$ when $x \sim p(x)$
 \\
-$\mathbf{1}$ or $\mathbf{1}_n$ & 
+$\mathbf{1}$ or $\mathbf{1}_n$ &
 vector of all 1's (of length $n$)
 \\
-$\mathbf{I}$ or $\mathbf{I}_n$ & 
+$\mathbf{I}$ or $\mathbf{I}_n$ &
 identity matrix (of length $n$)
 \\
-$\mathcal{N}(\boldsymbol{\mu}, \Sigma)$ & 
+$\mathcal{N}(\boldsymbol{\mu}, \Sigma)$ &
 Gaussian distribution with mean vector $\boldsymbol{\mu}$
 and the covariance matrix $\Sigma$
 \\
-$\mathcal{GP}$ & 
-Gaussian Process
+$\mathcal{GP}$ &
+Gaussian process
 \\
-$k(\mathbf{x}, \mathbf{x}')$ & 
+$k(\mathbf{x}, \mathbf{x}')$ &
 covariance or kernel function evaluated at points $\mathbf{x}$ and $\mathbf{x}'$
 \\
-$\mathbf{K}$ or $k(\mathbf{X}, \mathbf{X})$ & 
+$\mathbf{K}$ or $k(\mathbf{X}, \mathbf{X})$ &
 $N \times N$ covariance matrix with elements $k(\mathbf{x}_i, \mathbf{x}_j), i, j = 1, \ldots, N$
 \\
-$\mathbf{K}_{\mathbf{y}}$ & 
+$\mathbf{K}_{\mathbf{y}}$ &
 covariance or kernel matrix for noisy observations $\mathbf{y}$;
 for independent homoscedastic noise $\mathbf{K}_y = \mathbf{K} + \sigma_{noise}^2 \mathbf{I}$
 \\
-$\mathbf{k}$ or $k(\mathbf{X}, \mathbf{x}_*)$ & 
+$\mathbf{k}$ or $k(\mathbf{X}, \mathbf{x}_*)$ &
 vector of kernel values between test point $\mathbf{x}_*$
 and the training points $\mathbf{X}$
 \\
-$N$ & 
+$N$ &
 number of training points
 \\
-$D$ & 
+$D$ &
 number of random features
 \\
-$\mathcal{O}(\cdot)$ & 
+$\mathcal{O}(\cdot)$ &
 big O notation
 \\
-$\phi(\mathbf{x}_i)$ & 
+$\phi(\mathbf{x}_i)$ &
 feature map of input $\mathbf{x}_i$
 \\
-$\boldsymbol{\Phi}$ & 
+$\boldsymbol{\Phi}$ &
 matrix where each row is a feature map vector of input variable $\mathbf{x}_i$, $i = 1, \ldots, N$
 \\
-$\partial\boldsymbol{\Phi}$ and $\partial^2\boldsymbol{\Phi}$ & 
+$\partial\boldsymbol{\Phi}$ and $\partial^2\boldsymbol{\Phi}$ &
 matrix of the first and second derivatives of the feature map vectors correspondingly
 \\
-GP and GPR & 
-Gaussian Process and Gaussian Process Regression
+GPR &
+Gaussian process regression
 \\
-MSE and RMSE & 
-Mean squared error and root mean squared error
+MSE and RMSE &
+mean squared error and root mean squared error
 \\
-MLE & 
-Maximum likelihood estimation
+MLE &
+maximum likelihood estimation
 \\
-DoE & 
-Design of Experiment
+DoE &
+design of experiment
 \\
-RFF & 
-Random Fourier Features
+RFF &
+random Fourier features
 \\
-RKHS & 
-Reproducing Kernel Hilbert Space
+RKHS &
+reproducing kernel Hilbert space
 \\
-RBF & 
-Radial basis functions
+RBF &
+radial basis functions
 \\
-TT & 
-Tensor train
+TT &
+tensor train
 \\
-SLAM & 
-Simultaneous localization and mapping
+SLAM &
+simultaneous localization and mapping
 
 }
 
