Edited score matching section and references

--- a/text/Bibliography.bib
+++ b/text/Bibliography.bib
@@ -535,12 +535,16 @@ journal = "Proc. IMechE Part G: Aerospace Engineering",
   booktitle={{Proceedings of the International Conference on Machine Learning}},
   year={2013}
 }
-@article{choromanski2016recycling,
+
+@inproceedings{choromanski2016recycling,
   title={Recycling randomness with structure for sublinear time kernel expansions},
   author={Choromanski, Krzysztof and Sindhwani, Vikas},
-  journal={arXiv preprint arXiv:1605.09049},
-  year={2016}
+  booktitle={International Conference on Machine Learning},
+  pages={2502--2510},
+  year={2016},
+  organization={PMLR}
 }
+
 @article{bochner1933monotone,
   title={Monotone funktionen, Stieltjessche integrale und harmonische analyse},
   author={Bochner, Salomon},
@@ -796,12 +800,15 @@ journal = "Proc. IMechE Part G: Aerospace Engineering",
   year={1998},
   publisher={ACM}
 }
-@article{sutherland2015error,
-  title={On the error of random Fourier features},
+
+@inproceedings{sutherland2015error,
+  title={On the error of random fourier features},
   author={Sutherland, Dougal J and Schneider, Jeff},
-  journal={arXiv preprint arXiv:1506.02785},
+  booktitle={Proceedings of the Thirty-First Conference on Uncertainty in Artificial Intelligence},
+  pages={862--871},
   year={2015}
 }
+
 @book{haykin2012cognitive,
   title={Cognitive dynamic systems: perception-action cycle, radar and radio},
   author={Haykin, Simon},
@@ -1241,6 +1248,7 @@ journal = {Journal of Machine Learning Research}
   year={2012}
 }
 
+
 @article{forbes2015linear,
   title={Linear estimating equations for exponential families with application to Gaussian linear concentration models},
   author={Forbes, Peter GM and Lauritzen, Steffen},
@@ -1330,11 +1338,13 @@ journal = {Journal of Machine Learning Research}
     primaryClass={stat.ML}
 }
 
-@article{sutherland2017efficient,
-  title={Efficient and principled score estimation with Nystr$\backslash$" om kernel exponential families},
-  author={Sutherland, Dougal J and Strathmann, Heiko and Arbel, Michael and Gretton, Arthur},
-  journal={arXiv preprint arXiv:1705.08360},
-  year={2017}
+@inproceedings{sutherland2017efficient,
+  title={Efficient and principled score estimation with nystr{\"o}m kernel exponential families},
+  author={Sutherland, Dougal and Strathmann, Heiko and Arbel, Michael and Gretton, Arthur},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={652--660},
+  year={2018},
+  organization={PMLR}
 }
 
 @inproceedings{williams2001using,
@@ -2357,11 +2367,13 @@ journal = {Journal of Machine Learning Research}
   year={2020}
 }
 
-@article{malach2020proving,
-  title={Proving the Lottery Ticket Hypothesis: Pruning is All You Need},
-  author={Malach, Eran and Yehudai, Gilad and Shalev-Shwartz, Shai and Shamir, Ohad},
-  journal={arXiv preprint arXiv:2002.00585},
-  year={2020}
+@inproceedings{malach2020proving,
+  title={Proving the lottery ticket hypothesis: Pruning is all you need},
+  author={Malach, Eran and Yehudai, Gilad and Shalev-Schwartz, Shai and Shamir, Ohad},
+  booktitle={International Conference on Machine Learning},
+  pages={6682--6691},
+  year={2020},
+  organization={PMLR}
 }
 
 @article{lee2017deep,
@@ -2402,10 +2414,11 @@ journal = {Journal of Machine Learning Research}
   year={2019}
 }
 
-@article{frankle2018lottery,
-  title={The lottery ticket hypothesis: Finding sparse, trainable neural networks},
+
+@inproceedings{frankle2018lottery,
+  title={The Lottery Ticket Hypothesis: Finding Sparse, Trainable Neural Networks},
   author={Frankle, Jonathan and Carbin, Michael},
-  journal={arXiv preprint arXiv:1803.03635},
+  booktitle={International Conference on Learning Representations},
   year={2018}
 }
 
@@ -2539,11 +2552,13 @@ journal = {Journal of Machine Learning Research}
   year={2016}
 }
 
-@article{potechin2017exact,
+@inproceedings{potechin2017exact,
   title={Exact tensor completion with sum-of-squares},
   author={Potechin, Aaron and Steurer, David},
-  journal={arXiv preprint arXiv:1702.06237},
-  year={2017}
+  booktitle={Conference on Learning Theory},
+  pages={1619--1673},
+  year={2017},
+  organization={PMLR}
 }
 
 @article{chen2017denoising,
