--- a/text/include/publications.tex
+++ b/text/include/publications.tex
@@ -5,12 +5,12 @@
     \item Belyaev, M., Burnaev, E., Kapushev, Y. (2016). Computationally efficient algorithm
     for gaussian process regression in case of structured samples. Computational Mathematics
     and Mathematical Physics, 56(4), 499-513.
-    \item Belyaev, M., Burnaev, E., Kapushev, Y., Panov, M., Prikhodko, P., Vetrov, D., Yarotsky, D.
+    \item Belyaev, M., Burnaev, E., Kapushev, Y., Panov, M., Prikhodko, P., Vetrov, D., Yarotsky, D. (2016).
     GTApprox: surrogate modeling for industrial design. Advances in Engineering Software 102 (2016) 29–39 (Q1)
     \item Munkhoeva, M., Kapushev, Y., Burnaev, E., Oseledets, I. (2018). Quadrature-based
     features for kernel approximation. In Advances in Neural Information Processing Systems
     (pp. 9147-9156).
-    \item Kapushev, Y., Oseledets, I., \& Burnaev, E. (2020). Tensor completion via Gaussian process based initialization. Accepted by SIAM Journal on Scientific Computing.
+    \item Kapushev, Y., Oseledets, I.,  Burnaev, E. (2020). Tensor Completion via Gaussian Process--Based Initialization. SIAM Journal on Scientific Computing, 42(6), A3812-A3824.
     \item Tsimboy, O., Kapushev, Y., Burnaev, E., Oseledets, I. Denoising score matching with random Fourier features. Submitted to Neurocomputing.
     \item Kapushev, Y., Kishkun, A., Ferrer, G., Burnaev, E. Random  Fourier  features  based  SLAM. Submitted to 2021 IEEE International Conference on Robotics and Automation.
 \end{enumerate}
